--- a/styles/style.css
+++ b/styles/style.css
@@ -172,6 +172,7 @@ padding-bottom: 80px ;
     height: 240px;
     padding-top: 60px;
     background-size: contain;
+
     
 }
 
@@ -193,4 +194,24 @@ padding: 16px 28px;
 color: white;
 font-size: 16px;
 }
+
+footer{
+    padding-top: 80px;
+}
+.footer-part{
+
+padding-top: 30px;
+background-color: black;
+color: white;
+
+}
+
+.copy{
+    text-align: center;
+    font-size: small;
+}
+
+
+
+
 
