--- a/styles/style.css
+++ b/styles/style.css
@@ -167,8 +167,7 @@ padding-bottom: 80px ;
 
 
 .Last{
-
-    background-image: url('/Rectangle\ 9.png');
+    background-image: url('../images/Rectangle\ 9.png');
     background-position: center;
     background-repeat: no-repeat;
     height: 240px;
