--- a/styles/style.css
+++ b/styles/style.css
@@ -202,7 +202,7 @@ footer{
 .footer-part{
 
 padding-top: 30px;
-background-color: black;
+background-color: rgb(50, 47, 47);
 color: white;
 
 }
@@ -215,4 +215,22 @@ color: white;
 
 
 
+.mine{
 
+    background-color: rgba(238, 184, 21, 0.226);
+    text-align: center; 
+    margin-bottom: 50px;
+    margin-left: 215px;
+    margin-right: 215px;
+    border: solid black ;
+   
+    
+    
+}
+.own{
+    font-size: 20px;
+}
+.greet{
+    font-size: 25px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
